--- a/src/main/resources/at/wifi/notenmanager/views/login-view.fxml
+++ b/src/main/resources/at/wifi/notenmanager/views/login-view.fxml
@@ -1,28 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="at.wifi.notenmanager.controller.LoginController"
-            prefHeight="400.0" prefWidth="600.0"
-            stylesheets="@notenmanagerTheme.css">
+            prefWidth="600" prefHeight="400"
+            stylesheets="@notenmanagerTheme.css"
+            styleClass="root">
 
-    <VBox styleClass="card">
+    <VBox spacing="12"
+          alignment="CENTER"
+          maxWidth="400"
+          AnchorPane.topAnchor="0.0"
+          AnchorPane.bottomAnchor="0.0"
+          AnchorPane.leftAnchor="0.0"
+          AnchorPane.rightAnchor="0.0"
+          styleClass="card">
+
+        <!-- Überschrift -->
         <Label text="Login" styleClass="heading"/>
 
-        <Label text="E-Mail" styleClass="form-label"/>
-        <TextField fx:id="emailField" promptText="E-Mail" styleClass="text-field"/>
+        <!-- E-Mail -->
+        <Label text="E-Mail" styleClass="subheading"/>
+        <TextField fx:id="emailField" promptText="z. B. max@schule.at" styleClass="text-field"/>
 
-        <Label text="Passwort" styleClass="form-label"/>
-        <PasswordField fx:id="passwordField" promptText="Passwort" styleClass="password-field"/>
+        <!-- Passwort -->
+        <Label text="Passwort" styleClass="subheading"/>
+        <PasswordField fx:id="passwordField" promptText="Passwort eingeben" styleClass="text-field"/>
 
+        <!-- Feedback -->
         <Label fx:id="feedbackLabel" styleClass="status-label"/>
-        <Button text="Einloggen" onAction="#handleLogin" styleClass="primary-button"/>
-    </VBox>
 
+        <!-- Button -->
+        <Button text="Einloggen" onAction="#handleLogin" styleClass="button login-button"/>
+        <Button text="Zurück zur Startseite" onAction="#handleRedirect" styleClass="button login-button"/>
+
+    </VBox>
 </AnchorPane>
