--- a/src/main/resources/at/wifi/notenmanager/views/students-view.fxml
+++ b/src/main/resources/at/wifi/notenmanager/views/students-view.fxml
@@ -1,100 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="813.0" prefWidth="1201.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.wifi.notenmanager.controller.StudentsController">
+<StackPane styleClass="root"
+           stylesheets="@notenmanagerTheme.css"
+           xmlns="http://javafx.com/javafx/17.0.12"
+           xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="at.wifi.notenmanager.controller.StudentsController">
 
-    <Label layoutX="601.0" layoutY="14.0" prefHeight="32.0" prefWidth="207.0" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Schülerverwaltung" />
+    <VBox alignment="CENTER" spacing="24" styleClass="card" maxWidth="1100">
 
-    <TableView fx:id="studentsTable" layoutY="387.0" prefHeight="426.0" prefWidth="1360.0">
-        <columns>
-            <TableColumn fx:id="idColumn" prefWidth="60" text="ID" />
-            <TableColumn fx:id="firstNameColumn" prefWidth="140" text="Vorname" />
-            <TableColumn fx:id="lastNameColumn" prefWidth="140" text="Nachname" />
-            <TableColumn fx:id="classIdColumn" prefWidth="100" text="Klasse" />
-            <TableColumn fx:id="dobColumn" prefWidth="120" text="Geburtsdatum" />
-            <TableColumn fx:id="parentNameColumn" prefWidth="160" text="Elternteil" />
-            <TableColumn fx:id="strengthsColumn" prefWidth="160" text="Stärken" />
-            <TableColumn fx:id="weaknessesColumn" prefWidth="160" text="Schwächen" />
-            <TableColumn fx:id="healthInfoColumn" prefWidth="160" text="Gesundheit" />
-            <TableColumn fx:id="phoneNumberColumn" prefWidth="160" text="Tel.Nummer" />
-        </columns>
-        <placeholder>
-            <Label text="Keine Schüler vorhanden." />
-        </placeholder>
-    </TableView>
+        <!-- Titel -->
+        <Label text="Schülerverwaltung" styleClass="heading"/>
 
-    <TitledPane expanded="true" layoutX="202.0" layoutY="57.0" prefHeight="322.0" prefWidth="956.0" text="Schüler bearbeiten / anlegen">
-        <GridPane hgap="20" prefHeight="279.0" prefWidth="783.0" vgap="16">
-            <padding>
-                <Insets bottom="20" left="20" right="20" top="20" />
-            </padding>
-            <columnConstraints>
-                <ColumnConstraints halignment="RIGHT" minWidth="140" />
-                <ColumnConstraints hgrow="ALWAYS" />
-                <ColumnConstraints halignment="RIGHT" minWidth="140" />
-                <ColumnConstraints hgrow="ALWAYS" />
-            </columnConstraints>
-   
-            <!-- Spalte 1 -->
-            <Label text="Vorname:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <TextField fx:id="firstNameField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-   
-            <Label text="Nachname:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <TextField fx:id="lastNameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-   
-            <Label text="Klasse (ID/Bezeichnung):" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <TextField fx:id="classIdField" promptText="z. B. 1A" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-   
-            <Label text="Geburtsdatum:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <DatePicker fx:id="dobPicker" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-   
-            <Label text="Elternteil:" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <TextField fx:id="parentNameField" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-   
-            <!-- Spalte 2 -->
-            <Label text="Stärken:" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-            <TextField fx:id="strengthsField" GridPane.columnIndex="3" GridPane.rowIndex="0" />
-   
-            <Label text="Schwächen:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <TextField fx:id="weaknessesField" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-   
-            <Label text="Gesundheit:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <TextField fx:id="healthInfoField" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-   
-            <Label layoutX="81.0" layoutY="129.0" text="Tel.Nummer" GridPane.rowIndex="4" />
-            <TextField fx:id="phoneNumberField" layoutX="564.0" layoutY="90.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-   
-            <HBox alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="5">
-                <Label fx:id="statusLabel" textFill="red" />
-                <Pane HBox.hgrow="ALWAYS" />
-                <Button defaultButton="true" onAction="#onSave" text="Speichern" />
-                <Button onAction="#onDelete" text="Löschen" />
-                <Button onAction="#onReload" text="Aktualisieren" />
-            </HBox>
-   
-            <rowConstraints>
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints />
-            <RowConstraints />
-            </rowConstraints>
-        </GridPane>
+        <!-- Formularbereich -->
+        <TitledPane expanded="true" text="Schüler bearbeiten / anlegen" styleClass="titled-pane">
+            <content>
+                <GridPane hgap="20" vgap="16">
+                    <padding><Insets top="20" right="20" bottom="20" left="20"/></padding>
+                    <columnConstraints>
+                        <ColumnConstraints halignment="RIGHT" minWidth="140"/>
+                        <ColumnConstraints hgrow="ALWAYS"/>
+                        <ColumnConstraints halignment="RIGHT" minWidth="140"/>
+                        <ColumnConstraints hgrow="ALWAYS"/>
+                    </columnConstraints>
 
-    </TitledPane>
-</AnchorPane>
+                    <!-- Erste Spalte -->
+                    <Label text="Vorname:" styleClass="subheading" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                    <TextField fx:id="firstNameField" styleClass="text-field" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+
+                    <Label text="Nachname:" styleClass="subheading" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+                    <TextField fx:id="lastNameField" styleClass="text-field" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+
+                    <Label text="Klasse (ID/Bezeichnung):" styleClass="subheading" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+                    <TextField fx:id="classIdField" promptText="z. B. 1A" styleClass="text-field" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+
+                    <Label text="Geburtsdatum:" styleClass="subheading" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+                    <DatePicker fx:id="dobPicker" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+
+                    <Label text="Tel.Nummer:" styleClass="subheading" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+                    <TextField fx:id="phoneNumberField" styleClass="text-field" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+
+                    <!-- Zweite Spalte -->
+                    <Label text="Stärken:" styleClass="subheading" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
+                    <TextField fx:id="strengthsField" styleClass="text-field" GridPane.columnIndex="3" GridPane.rowIndex="0"/>
+
+                    <Label text="Schwächen:" styleClass="subheading" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+                    <TextField fx:id="weaknessesField" styleClass="text-field" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
+
+                    <Label text="Gesundheit:" styleClass="subheading" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+                    <TextField fx:id="healthInfoField" styleClass="text-field" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
+
+                    <Label text="Elternteil:" styleClass="subheading" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
+                    <TextField fx:id="parentNameField" styleClass="text-field" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
+
+                    <!-- Buttons -->
+                    <HBox alignment="CENTER_RIGHT" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="5">
+                        <Label fx:id="statusLabel" styleClass="subheading"/>
+                        <Pane HBox.hgrow="ALWAYS"/>
+                        <Button fx:id="saveButton" text="Speichern" onAction="#onSave" styleClass="button login-button"/>
+                        <Button fx:id="deleteButton" text="Löschen" onAction="#onDelete" styleClass="button logout-button"/>
+                        <Button fx:id="reloadButton" text="Aktualisieren" onAction="#onReload" styleClass="button"/>
+                    </HBox>
+                </GridPane>
+            </content>
+        </TitledPane>
+
+        <!-- Info-Bereich -->
+        <TitledPane expanded="false" text="🛈 Was macht dieser Bereich?" maxWidth="950">
+            <VBox spacing="6" styleClass="card">
+                <padding><Insets top="12" bottom="12" left="12" right="12"/></padding>
+                <Label text="In diesem Bereich verwalten Sie Schülerdaten..." wrapText="true"/>
+                <Label text="Alle Angaben sind optional und lokal gespeichert." wrapText="true"/>
+            </VBox>
+        </TitledPane>
+
+        <!-- Tabelle -->
+        <TableView fx:id="studentsTable" styleClass="table-view">
+            <columns>
+                <TableColumn fx:id="idColumn" text="ID" prefWidth="60"/>
+                <TableColumn fx:id="firstNameColumn" text="Vorname" prefWidth="140"/>
+                <TableColumn fx:id="lastNameColumn" text="Nachname" prefWidth="140"/>
+                <TableColumn fx:id="classIdColumn" text="Klasse" prefWidth="100"/>
+                <TableColumn fx:id="dobColumn" text="Geburtsdatum" prefWidth="120"/>
+                <TableColumn fx:id="parentNameColumn" text="Elternteil" prefWidth="160"/>
+                <TableColumn fx:id="strengthsColumn" text="Stärken" prefWidth="160"/>
+                <TableColumn fx:id="weaknessesColumn" text="Schwächen" prefWidth="160"/>
+                <TableColumn fx:id="healthInfoColumn" text="Gesundheit" prefWidth="160"/>
+                <TableColumn fx:id="phoneNumberColumn" text="Tel.Nummer" prefWidth="160"/>
+            </columns>
+            <placeholder>
+                <Label text="Keine Schüler vorhanden."/>
+            </placeholder>
+        </TableView>
+
+    </VBox>
+</StackPane>
