--- a/src/main/resources/at/wifi/notenmanager/views/subjects-view.fxml
+++ b/src/main/resources/at/wifi/notenmanager/views/subjects-view.fxml
@@ -1,59 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="632.0" prefWidth="961.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.wifi.notenmanager.controller.SubjectController">
+<StackPane styleClass="root" stylesheets="@notenmanagerTheme.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.wifi.notenmanager.controller.SubjectController">
 
-    <Label layoutX="224.0" layoutY="14.0" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Fächerverwaltung" />
+    <VBox alignment="CENTER" maxWidth="1000" spacing="24" styleClass="card">
 
-    <TitledPane expanded="true" layoutX="14.0" layoutY="48.0" text="Fach anlegen / bearbeiten">
-        <GridPane hgap="12" vgap="10">
-            <padding>
-                <Insets bottom="12" left="12" right="12" top="12" />
-            </padding>
-            <columnConstraints>
-                <ColumnConstraints halignment="RIGHT" minWidth="180" />
-                <ColumnConstraints hgrow="ALWAYS" />
-            </columnConstraints>
+        <!-- Titel -->
+        <Label styleClass="heading" text="Fächerverwaltung" />
 
-            <Label text="Fachname:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <TextField fx:id="nameField" promptText="z. B. Mathematik" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <rowConstraints>
-                <RowConstraints />
-            </rowConstraints>
-        </GridPane>
-    </TitledPane>
+        <!-- Formularbereich -->
+        <TitledPane expanded="true" styleClass="titled-pane" text="Fach anlegen / bearbeiten">
+            <content>
+                <GridPane hgap="12" vgap="10">
+                    <padding>
+                        <Insets bottom="12" left="12" right="12" top="12" />
+                    </padding>
+                    <columnConstraints>
+                        <ColumnConstraints halignment="RIGHT" minWidth="160" />
+                        <ColumnConstraints hgrow="ALWAYS" />
+                    </columnConstraints>
 
-    <HBox alignment="CENTER_LEFT" layoutX="14.0" layoutY="143.0" prefHeight="25.0" prefWidth="374.0" spacing="10">
-        <Label fx:id="statusLabel" textFill="red" />
-        <Pane HBox.hgrow="ALWAYS" />
-        <Button fx:id="saveButton" defaultButton="true" onAction="#onSave" text="Speichern" />
-        <Button fx:id="deleteButton" onAction="#onDelete" text="Löschen" />
-        <Button fx:id="reloadButton" onAction="#onReload" text="Aktualisieren" />
-        <Button fx:id="editDetailsButton" onAction="#onEditDetails" text="Details bearbeiten" />
-    </HBox>
+                    <Label styleClass="subheading" text="Fachname:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                    <TextField fx:id="nameField" promptText="z.B. Mathematik" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+               <rowConstraints>
+                  <RowConstraints />
+               </rowConstraints>
+                </GridPane>
+            </content>
+        </TitledPane>
+      <Pane>
+         <children>
+            <Button fx:id="saveButton" layoutX="543.0" layoutY="1.0" onAction="#onSave" prefHeight="27.0" prefWidth="125.0" styleClass="button login-button" text="Fach speichern" />
+            <Button fx:id="deleteButton" layoutX="685.0" layoutY="1.0" onAction="#onDelete" styleClass="button logout-button" text="Ausgewähltes Fach löschen" />
+         </children>
+      </Pane>
 
-    <TableView fx:id="subjectTable" layoutX="14.0" layoutY="198.0" prefHeight="420.0" prefWidth="692.0">
-        <columns>
-            <TableColumn fx:id="idColumn" prefWidth="70" text="ID" />
-            <TableColumn fx:id="nameColumn" prefWidth="260" text="Fachname" />
-            <TableColumn fx:id="componentsColumn" prefWidth="360" text="Bewertung (%)" />
-        </columns>
-        <placeholder>
-            <Label text="Keine Fächer vorhanden." />
-        </placeholder>
-    </TableView>
+        <!-- Tabellenbereich -->
+        <TableView fx:id="subjectTable" prefHeight="400" styleClass="table-view">
+            <columns>
+                <TableColumn fx:id="idColumn" prefWidth="70" text="ID" />
+                <TableColumn fx:id="nameColumn" prefWidth="260" text="Fachname" />
+                <TableColumn fx:id="componentsColumn" prefWidth="360" text="Bewertung (%)" />
+            </columns>
+            <placeholder>
+                <Label text="Keine Fächer vorhanden." />
+            </placeholder>
+        </TableView>
 
-    <TitledPane expanded="false" layoutX="517.0" layoutY="48.0" prefHeight="25.0" prefWidth="430.0" text="🛈 Was macht dieser Bereich?">
-        <VBox spacing="4">
-            <padding>
-                <Insets bottom="18" left="18" right="18" top="18" />
-            </padding>
-            <Label text="In diesem Bereich vergeben Sie Noten pro Fachkomponente..." wrapText="true" />
-            <Label text="Wählen Sie dazu zuerst einen Schüler und ein Fach..." wrapText="true" />
-        </VBox>
-    </TitledPane>
+        <!-- Buttons -->
+        <HBox alignment="CENTER_RIGHT" spacing="12">
+            <Label fx:id="statusLabel" styleClass="subheading" />
+            <Button fx:id="editDetailsButton" onAction="#onEditDetails" styleClass="button" text="Details bearbeiten" />
+        </HBox>
 
-</AnchorPane>
+        <!-- Info-Bereich -->
+        <TitledPane expanded="false" maxWidth="900" text="🛈 Was macht dieser Bereich?">
+            <VBox spacing="6" styleClass="card">
+                <padding><Insets bottom="12" left="12" right="12" top="12" /></padding>
+                <Label style="-fx-font-weight: bold;"
+                       text="In diesem Bereich können Sie Ihre Unterrichtsfächer anlegen und anschließend individuell gewichten." wrapText="true" />
+                <Label text="• Wählen Sie ein bereits angelegtes Fach aus." wrapText="true" />
+                <Label text="• Klicken Sie auf 'Details bearbeiten'." wrapText="true" />
+                <Label text="• Speichern Sie die neue Gewichtung oder löschen Sie bestehende Einträge." wrapText="true" />
+            </VBox>
+
+        </TitledPane>
+
+    </VBox>
+</StackPane>
